# jwks-cache

./: .gitignore  AGENTS.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: release.yml
docs/: governance.md  index.md
docs/guide/: index.md
docs/guide/development/languages/: rust.md
docs/spec/: architecture.md  index.md
specs/001-build-jwks-cache/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-jwks-cache/checklists/: requirements.md
specs/001-build-jwks-cache/contracts/: jwks-cache.openapi.yaml
src/: cache.rs  error.rs  http.rs  lib.rs  metrics.rs  registry.rs  security.rs
src/cache/: entry.rs  manager.rs  state.rs
src/http/: client.rs  retry.rs  semantics.rs
tests/integration/: jwks_refresh.rs  main.rs  multi_tenant.rs
